# nyx

./: .gitignore  Cargo.toml  LICENSE  project-plan.md
.github/workflows/: ci.yml
docs/: git-governance.md
docs/reviews/: 2026-05-04-phase1-plan-review-round3.md  2026-05-04-phase1-plan-review.md
docs/specs/: 2026-05-08-panel-settings-design.md  2026-05-08-panel-settings-plan.md
docs/superpowers/plans/: 2026-05-04-phase1-foundation.md  2026-05-05-phase2-core-vim-editing.md
docs/superpowers/specs/: 2026-05-04-nyx-editor-design.md  2026-05-05-phase2-core-vim-editing-design.md
src/: app.rs  editor.rs  main.rs
src/buffer/: history.rs  mod.rs  text_buffer.rs
src/config/: ai_config.rs  lsp_config.rs  mod.rs  panels_config.rs  schema.rs
src/file_io/: file.rs  mod.rs
src/lsp/: client.rs  download.rs  mod.rs  protocol.rs  registry.rs  transport.rs
src/modules/: command_palette.rs  filetree.rs  git.rs  mod.rs  search_popup.rs  terminal.rs
src/modules/ai_chat/: claude_provider.rs  message.rs  mod.rs  provider.rs
src/renderer/: editor_view.rs  mod.rs  status_bar.rs  theme.rs
src/syntax/: highlighter.rs  indent.rs  languages.rs  mod.rs  simple.rs
src/syntax/queries/bash/: highlights.scm
src/syntax/queries/c/: highlights.scm
src/syntax/queries/cpp/: highlights.scm
src/syntax/queries/csharp/: highlights.scm
src/syntax/queries/css/: highlights.scm
src/syntax/queries/dart/: highlights.scm
src/syntax/queries/elixir/: highlights.scm
src/syntax/queries/go/: highlights.scm
src/syntax/queries/r/: highlights.scm
src/views/: diff.rs  keybindings.rs  lsp_servers.rs  mod.rs  settings.rs
src/vim/: action.rs  command.rs  keyparser.rs  mod.rs  mode.rs  motion.rs  operator.rs  register.rs  search.rs  text_object.rs
(+20 files in other folders)
