[package]
name = "nyx"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
ropey = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"
arboard = "3"
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-json = "0.24.8"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
