[package]
name = "nyx"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
ropey = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"
arboard = "3"
tree-sitter = "0.26.8"
tree-sitter-rust = "0.24.2"
tree-sitter-json = "0.24.8"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-bash = "0.25.1"
tree-sitter-css = "0.25.0"
tree-sitter-html = "0.23.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-md = "0.5.3"
tree-sitter-lua = "0.5.0"
tree-sitter-swift = "0.7.2"
tree-sitter-scala = "0.26.0"
tree-sitter-zig = "1.1.2"
tree-sitter-elixir = "0.3.5"
tree-sitter-haskell = "0.23.1"
tree-sitter-r = "1.2.0"
tree-sitter-dart = "0.2.0"
tree-sitter-ocaml = "0.24.2"
tree-sitter-svelte-ng = "1.0.2"
tree-sitter-handlebars = "0.1.0"
crossbeam-channel = "0.5"
ureq = "3"
egui_term = "0.1"

[dev-dependencies]
